Closed Bug 339412 Opened 20 years ago Closed 20 years ago

nsIDOMGCParticipant implementation in nsDOMAttribute looks wrong

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: peterv, Assigned: peterv)

References

Details

(Keywords: fixed1.8.1)

Attachments

(1 file, 1 obsolete file)

nsDOMAttribute::GetSCCIndex checks whether the attribute is "specified". This just means that the node was specified in the source (or if specified is false it got added through a DTD). It shouldn't matter for reachability of the ownerElement. nsDOMAttribute::AppendReachableList doesn't add the ownerDocument to the list. One can have attributes as root of a disconnected subtree.
Attached patch v1 (obsolete) — Splinter Review
Assignee: general → peterv
Status: NEW → ASSIGNED
Attachment #223532 - Flags: superreview?(dbaron)
Attachment #223532 - Flags: review?(dbaron)
Attachment #223532 - Flags: superreview?(dbaron)
Attachment #223532 - Flags: superreview+
Attachment #223532 - Flags: review?(dbaron)
Attachment #223532 - Flags: review+
Attached patch v1Splinter Review
Hrmpf, attached the wrong patch, this is the one that compiles. I'm carrying over the r/sr, it just adds an include and uses GetContentInternal instead of GetCurrentDoc.
Attachment #223532 - Attachment is obsolete: true
Attachment #223549 - Flags: superreview+
Attachment #223549 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Fixed on MOZILLA_1_8_BRANCH by checkin of bug 336791.
Keywords: fixed1.8.1
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: