Fix for bug 339412 (nsIDOMGCParticipant implementation in nsDOMAttribute looks wrong). r/sr=dbaron.